finalized styling of story cards, updated spacing issues on stories page, updated styling of story cards on home and single story pages

--- a/assets/scss/partials/_cards.scss
+++ b/assets/scss/partials/_cards.scss
@@ -8,7 +8,7 @@
     padding: 20px 25px;
     position: relative;
     text-decoration: none;
-
+   	transition: all 0.3s;
     width: 100%;
 
     img {
@@ -22,7 +22,8 @@
 
     .card-title {
         position: relative;
-        line-height: 1;
+        font-size: 26px;
+        z-index: 1;
     }
 
     .cover {
@@ -37,9 +38,7 @@
     }
 
     &:hover {
-        .cover {
             border: 4px solid $accent;
-        }
     }
 }
 
@@ -77,7 +76,7 @@
             li{
                 cursor: pointer;
                 width: 49%; //card sizing
-                height: 160px;
+                height: 180px;
                 margin-bottom: 2%; //card placement for this and 2 child stylings
                 margin-right: 2%;
                 padding: 20px;
@@ -96,6 +95,12 @@
                     text-decoration: none;
                     position: absolute;
                     z-index: 1;
+                    width: 90%;
+                    
+                    h2 {
+	                    text-shadow: 0 3px 5px rgba(0,0,0,0.3);
+                    }
+                    
                 }
 
                 // &:nth-child(2n-1){
@@ -108,11 +113,10 @@
                 }
 
                 .card-title{
-                    font-size: 1.5em;
+                    font-size: 26px; 
                     color: $white;
                     margin-bottom: 22px;
                     line-height: 1;
-                    overflow: hidden;
                     text-overflow: ellipsis;
                     -webkit-line-clamp: 3;
                     -webkit-box-orient: vertical;
@@ -144,6 +148,7 @@
                 li{
                     width: 100%;
                     margin-right: 0;
+                    margin-bottom: 25px;
                 }
             }
         }
