--- a/assets/scss/partials/_stories.scss
+++ b/assets/scss/partials/_stories.scss
@@ -36,6 +36,7 @@
         padding: 0;
         margin: 0;
         width: fit-content;
+        margin-top: 20px;
         margin-bottom: 35px;
 
         li.card {
@@ -54,7 +55,7 @@
         li.card-story{
             cursor: pointer;
             width: 390px; //card sizing
-            height: 160px;
+            height: 215px;
             margin-right: 20px;
             padding: 20px;
             background-position: center;
@@ -71,6 +72,7 @@
                 text-decoration: none;
                 position: absolute;
                 z-index: 1;
+                width: 90%;
             }
 
             // &:nth-child(2n-1){
@@ -82,12 +84,11 @@
             // }
 
             .card-title{
-                font-size: 1.5em;
+                font-size: 26px;
                 color: $white;
                 line-height: 1;
                 margin: 0;
                 margin-bottom: 22px;
-                overflow: hidden;
                 text-overflow: ellipsis;
                 -webkit-line-clamp: 3;
                 -webkit-box-orient: vertical;
@@ -100,7 +101,7 @@
             }
         }
         h2{
-            text-shadow: 0 3px 5px rgba(0,0,0,0.2);
+            text-shadow: 0 3px 5px rgba(0,0,0,0.3);
         }
     }
 }
@@ -331,7 +332,7 @@
     .storycard{
 
         #all-header{
-            margin-bottom: 100px;
+            margin-bottom: 30px;
 
             .header-search{
                 .column-header{
